# plynth

./: .all-contributorsrc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile.example  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  coverage.xml  docker-compose.prod.yml  docker-compose.yml  fly.toml  mkdocs.yml  pyproject.toml
.claude/skills/add-endpoint/: SKILL.md
.claude/skills/add-feature/: SKILL.md
.claude/skills/add-migration/: SKILL.md
.claude/skills/electron-pro/: SKILL.md
.claude/skills/error-handling-and-audit/: SKILL.md
.claude/skills/multi-product/: SKILL.md
.claude/skills/multi-tenant/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/testing/: SKILL.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  sdk-python-publish.yml  sdk-typescript-publish.yml
app/: __init__.py  main.py
app/api/v1/: admin.py  audit.py  auth.py  components.py  components_admin.py  credits.py  env.py  env_admin.py  integrations.py  jobs.py  plans.py  roles.py  router.py  storage.py  subscriptions.py  tenants.py  users.py  webhooks.py  webhooks_admin.py
app/core/: config.py  crypto.py  database.py  dependencies.py  error_handlers.py  exceptions.py  logging.py  redis.py  security.py  tenant.py
app/middleware/: rate_limit.py  request_context.py
app/models/: __init__.py  audit.py  base.py  component.py  credit.py  env_var.py  idempotency.py  invoice.py  job.py  permission.py  plan.py  product.py  role.py  service_token.py  storage.py  subscription.py  tenant.py  user.py  webhook_endpoint.py
app/providers/: notifications.py
app/providers/billing/: __init__.py  base.py  factory.py  mock.py  razorpay.py  stripe.py
app/repositories/: base.py
app/schemas/: audit.py  auth.py  common.py  component.py  credit.py  env_var.py  integrations.py  job.py  plan.py  product.py  role.py  service_token.py  storage.py  subscription.py  tenant.py  user.py  webhook_endpoint.py
app/services/: audit.py  auth.py  billing.py  component.py  credit.py  env_var.py  google_oauth.py  job.py  plan.py  product.py  rbac.py  service_token.py  storage.py  subscription.py  tenant.py  user.py  webhook_endpoint.py
app/tasks/: payment_reminders.py  worker.py
apps/admin-electron/: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package-lock.json  package.json  tsconfig.json
apps/admin-electron/src/main/: config.ts  index.ts
apps/admin-electron/src/main/api/: client.ts  errors.ts  secrets.ts
apps/admin-electron/src/main/ipc/: audit.ts  auth.ts  credits.ts  index.ts  plans.ts  products.ts  roles.ts  subscriptions.ts  tenants.ts  users.ts
apps/admin-electron/src/preload/: index.ts
apps/admin-electron/src/renderer/: App.tsx  index.html  main.tsx  theme.ts
apps/admin-electron/src/renderer/components/: AppShell.tsx  ErrorBoundary.tsx  PageHeader.tsx  (+1 more)
apps/admin-electron/src/shared/: ipc-channels.ts  types.ts
docs/: 404.md  INTEGRATION.md  api-reference.md  architecture.md  billing.md  credits.md  deploy-digitalocean.md  deploy-example.md  deploy-fly.md  deployment.md  hosting-and-integration.md  index.md  multi-product.md  multi-tenancy.md  openapi.json  postman_collection.json  quickstart.md  rbac.md
docs/launch/: awesome-fastapi.md  devto-article.md  linkedin-post.md  newsletter-pitches.md  reddit-posts.md  show-hn.md  twitter-thread.md
docs/stylesheets/: extra.css
examples/nextjs-starter/: .env.example  README.md  next.config.mjs  package-lock.json  package.json
examples/nextjs-starter/app/: globals.css  layout.tsx  page.tsx
examples/nextjs-starter/app/login/: actions.ts  page.tsx
examples/nextjs-starter/app/signup/: page.tsx
examples/nextjs-starter/lib/: plynth.ts  session.ts
migrations/: env.py
plynth_cli/: README.md  __init__.py  __main__.py  cli.py  client.py  config.py
plynth_cli/commands/: __init__.py  audit.py  auth.py  credits.py  plans.py  products.py  subscription.py  tenants.py  users.py
scripts/: backup.sh  change_password.py  dump_openapi.py  gen_social_preview.py  migrate.py  seed.py  seed_mayva.py
sdks/: README.md
sdks/python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdks/python/examples/: async_usage.py  sync_usage.py
sdks/python/plynth_sdk/: __init__.py  _http.py  async_client.py  auth.py  client.py  errors.py  types.py
sdks/python/plynth_sdk/resources/: __init__.py  async_.py  sync.py
sdks/python/tests/: conftest.py  test_auth_store.py  test_client_async.py  test_client_sync.py  test_env.py
sdks/typescript/: .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/examples/: node.ts
sdks/typescript/src/: auth.ts  client.ts  errors.ts  http.ts  index.ts  types.ts
sdks/typescript/src/resources/: admin_components.ts  admin_env.ts  auth.ts  components.ts  credits.ts  env.ts  plans.ts  products.ts  roles.ts  service_tokens.ts  subscription.ts  tenants.ts  users.ts
sdks/typescript/tests/: client.test.ts
tests/: conftest.py
tests/integration/: test_act_as_child.py  test_admin_products.py  test_audit.py  test_auth.py  test_auth_flow.py  test_auth_google.py  test_auth_password_reset.py  test_components.py  test_credit_concurrency.py  test_credits.py  test_credits_api.py  test_env_admin.py  test_google_oauth_exchange.py  test_jobs.py  test_lifecycle.py  test_mayva_catalog.py  test_meta.py  test_payment_reminders.py  test_plans.py  test_platform_admin_god_mode.py  test_product_isolation.py  test_product_refresh_ttl.py  test_rbac_enforcement.py  test_register_individual.py  test_roles.py  test_storage.py  test_subscriptions.py  test_tenants.py  test_users.py  test_webhooks.py  test_webhooks_admin.py
tests/property/: test_rbac_props.py  test_tenant_isolation_props.py
tests/unit/: test_crypto.py  test_security.py
vhs/: README.md  demo.tape
(+31 files in other folders)
