[project]
name = "product-platform"
version = "0.1.0"
description = "Reusable multi-tenant SaaS platform layer: auth, RBAC, billing, credits."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "arq>=0.26",
    "argon2-cffi>=23.1",
    "pyjwt[crypto]>=2.10",
    "httpx>=0.28",
    "structlog>=24.4",
    "python-multipart>=0.0.20",
    "email-validator>=2.2",
    "orjson>=3.10",
    "tenacity>=9.0",
    "stripe>=11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-redis",
    "faker>=33",
    "respx>=0.21",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# High-value, low-false-positive rules: pycodestyle errors + warnings,
# pyflakes, import sorting, bugbear, pyupgrade, async correctness.
# Pylint-port (PL), Ruff (RUF), and simplify (SIM) families are too noisy
# for an early-stage project; reconsider once codebase stabilises.
select = ["E", "W", "F", "I", "B", "UP", "ASYNC"]
ignore = [
    "UP042",  # str+enum is the documented Pydantic-friendly pattern; not migrating to StrEnum yet
    "UP046",  # PEP 695 type params — codebase still uses Generic[T] consistently
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]
# Pragmatic subset of strict — keeps the high-value checks (typed defs in
# new code, no implicit Any, untyped-call hygiene) and drops the
# noisiest pre-1.0 ones (no-untyped-def in tests, strict optional in
# helpers). Tighten as the codebase matures.
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = true
disallow_untyped_decorators = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:fastapi.*",
    "ignore::pydantic.PydanticDeprecatedSince20",
]
