[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plynth-sdk"
version = "0.1.0"
description = "Official Python SDK for the Plynth platform — auth, tenants, plans, credits, RBAC."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Shubham Katta", email = "shubhamkatta7@gmail.com" }]
keywords = ["plynth", "saas", "multi-tenant", "rbac", "billing", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://shubhamkatta.github.io/plynth/"
Repository = "https://github.com/shubhamkatta/plynth"
Issues = "https://github.com/shubhamkatta/plynth/issues"
Changelog = "https://github.com/shubhamkatta/plynth/blob/main/sdks/python/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["plynth_sdk"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Resource classes expose a `list()` method which shadows the `list` builtin
# inside the class scope — return annotations need `typing.List` for mypy to
# resolve correctly. Keep the `List[T]` form here.
"plynth_sdk/resources/sync.py" = ["UP006", "UP035"]
"plynth_sdk/resources/async_.py" = ["UP006", "UP035"]

[tool.mypy]
python_version = "3.12"
strict = true
# Disabled: resource methods unmarshal JSON into TypedDicts. The cast is
# documentation-only — runtime guarantees come from the platform's OpenAPI
# contract, not from the SDK. Treating every JSON return as Any would force
# noise-only casts in every method.
warn_return_any = false
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
